Fixed button coloration in dark mode

--- a/parley/src/theme/variables.css
+++ b/parley/src/theme/variables.css
@@ -144,7 +144,7 @@ body.dark {
 
   --ion-color-primary: #00e1cf;
   --ion-color-primary-rgb: 0, 225, 207;
-  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast: #111111;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #2ca4ff;
   --ion-color-primary-tint: #55ffff;
